# sdk

./: .env.schema  .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml  requirements.txt  setup.py
client/: client.py  credentials.py  exceptions.py  logger.py
client/api/: base_class.py  dataset_files.py  datasets.py  hpc.py  project_files.py  project_users.py  projects.py
client/model/: file_task.py  file_task_socket.py  validator.py
docs/: Authentication.md  Base_Class.md  Dataset.md  Dataset_Files.md  Project_Files.md  Projects.md
test/: test_dataset.py  test_dataset_files.py  test_login.py  test_project.py  test_project_files.py
